--- a/index.html
+++ b/index.html
@@ -249,104 +249,65 @@
 </section>
 
 
-<!--Section Range-->
-
-<section class="section-range" id= "range">
-
-    <h2 class="titre-exp">Skills</h2>
-
-
-    <div class="grille-skills">
-
-        <div class= "skills-colonne1">
-            <div class="range-cont1">
-                <p class="label-skill"> PHP/Javascript</p>
-                <p class="number-skill">90%</p>
-                <div class="barre-skill b1"></div>
-                    <img class="img-medias3" src="images/barre1.png">
-                <div class="barre-grises"></div>
-            </div>
-
-            <div class="range-cont2">
-                <p class="label-skill"> HTML/CSS</p>
-                <p class="number-skill">82%</p>
-                <div class="barre-skill b2">
-                    <img class="img-medias3" src="images/barre2.png">
-                </div>
-            </div>
-            <div class="range-cont3">
-                <p class="label-skill"> JAVA/PYTHON</p>
-                <p class="number-skill">70%</p>
-                <div class="barre-skill b3">
-                    <img class="img-medias3" src="images/barre3.png">
-                </div>
-            </div>
-        </div>
-   
-        <div class="skills-colonne2">
-            <div class="range-cont4">
-                <p class="label-skill"> UI/UX Design</p>
-                <p class="number-skill">65%</p>
-                <div class="barre-skill b3">
-                    <img class="img-medias3" src="images/barre4.png">
-                </div>
-            </div>
-
-            <div class="range-cont5">
-                <p class="label-skill"> SEO/Content Creation</p>
-                <p class="number-skill">62%</p>
-                <div class="barre-skill b3">
-                     <img class="img-medias3" src="images/barre5.png">
-                </div>
-            </div>
-
-            <div class="range-cont6">
-                <p class="label-skill"> Graphic Design</p>
-                <p class="number-skill">40%</p>
-            <div class="barre-skill b3">
-                <img class="img-medias3" src="images/barre6.png">
-            </div>
-        </div>
-
-</section>
 
 
 
-<!-- Section Skills
+<!-- Section Skills -->
 
-<section class="section-range" id="range">
+ <section class="section-range" id="range">
 
     <h2 class="titre-exp">Skills</h2>
+
     <div class="grille-skill">
-        <div class="skillsrightt">
-            <img class ="skillsgraphe" src="images/graphe.png" alt="imagegraphe">
+
+
+        <div class="range-cont">
+            <p class="label-skill">PHP/JavaScript</p>
+            <p class="number-skill">90%</p>
+            <div class="barre-skill b1"></div>
+            <div class="barre-grises"></div>
+        </div>
+        <div class="range-cont">
+            <p class="label-skill">HTML/CSS</p>
+            <p class="number-skill">75%</p>
+            <div class="barre-skill b2"></div>
+            <div class="barre-grises"></div>
+        </div>
+        <div class="range-cont">
+            <p class="label-skill">Java/Python</p>
+            <p class="number-skill">70%</p>
+            <div class="barre-skill b3"></div>
+            <div class="barre-grises"></div>
         </div>
 
-        <div class ="skillsleft">
-            <div>
-            <img class ="img-medias3" src="images/php.png" height="100" width="100"> <img class ="img-medias3" src="images/javascript.png" >
-            </div>
-            <div>
-            <img class ="img-medias3" src="images/html.png" height="100" width="100"> <img class ="img-medias3" src="images/css.png" height="300" width="300">
-            </div>
-            <div>
-            <img class ="img-medias3" src="images/java.png" height="100" width="100"> <img class ="img-medias3" src="images/python.png" height="300" width="300">
-            </div>
-            <div>
-            <img class ="img-medias3" src="images/UIUXlogo.png" height="100" width="100">
-            </div>
-            <div>
-            <img class="img-medias3" src="images/seoo.png" height="100" width="100" alt="imagegraphe">
-            </div>
 
+        <div class="range-cont">
+            <p class="label-skill">UI/UX Design</p>
+            <p class="number-skill">80%</p>
+            <div class="barre-skill b4"></div>
+            <div class="barre-grises"></div>
         </div>
+        <div class="range-cont">
+            <p class="label-skill">Graphic Design</p>
+            <p class="number-skill">60%</p>
+            <div class="barre-skill b5"></div>
+            <div class="barre-grises"></div>
+        </div>
+        <div class="range-cont">
+            <p class="label-skill"> Content Creation</p>
+            <p class="number-skill">60%</p>
+            <div class="barre-skill b6"></div>
+            <div class="barre-grises"></div>
+        </div>
+
+
     </div>
 
 </section>
 
- -->
+ 
 
-<!-- Section Professionel Experience -->
+<!-- Section Professional Experience -->
 
 <section class="travail-exp" id="exp">
 
@@ -356,47 +317,45 @@
 
         <div class="barre-verticale">
             <div class="boule-ico">
-                <img src="ressources/google.svg" alt="icone gauche">
+                <img src="images/google.png" alt="icone gauche" width=120>
             </div>
             <div class="boule-ico">
-                <img src="ressources/instagram.svg" alt="icone gauche">
+                <img src="images/instagram.png" alt="icone gauche" width= 120>
             </div>
             <div class="boule-ico">
-                <img src="ressources/amazon.svg" alt="icone gauche">
+                <img src="images/amazonn.png" alt="icone gauche" width=120>
             </div>
             <div class="boule-ico">
-                <img src="ressources/apple.svg" alt="icone gauche">
-            </div>
-            <div class="boule-ico">
-                <img src="ressources/plane.svg" class="avion" alt="icone gauche">
+                <img src="images/apple.png" alt="icone gauche" width=120>
             </div>
         </div>
 
 
         <div class="flex-cont-bloc-exp">
 
-            <div class="bloc bloc1">
+            <div class="bloc-bloc">
                 <div class="contenu-bloc">
                     <p class="titre-section-bloc">Google, 2019</p>
                     <p class="txt-section">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In perferendis dignissimos doloribus quaerat corrupti facere ratione modi vel. Voluptatem minima facilis eaque eum quia voluptatibus dolorem minus incidunt repellendus culpa?</p>
                 </div>
             </div>
 
-            <div class="bloc bloc2">
+            <div class="bloc-bloc">
                 <div class="contenu-bloc">
                     <p class="titre-section-bloc">Instagram, 2017-2018</p>
+                    
                     <p class="txt-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, vel ipsam nulla aliquid quae beatae ut et cum libero molestiae?</p>
                 </div>
             </div>
 
-            <div class="bloc bloc3">
+            <div class="bloc-bloc">
                 <div class="contenu-bloc">
                     <p class="titre-section-bloc">Amazon, 2015-2016</p>
                     <p class="txt-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, vel ipsam nulla aliquid quae beatae ut et cum libero molestiae?</p>
                 </div>
             </div>
 
-            <div class="bloc bloc4">
+            <div class="bloc-bloc">
                 <div class="contenu-bloc">
                     <p class="titre-section-bloc">Apple, 2012-2014</p>
                     <p class="txt-section">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, vel ipsam nulla aliquid quae beatae ut et cum libero molestiae?</p>
@@ -446,3 +405,6 @@
     
 </body>
 </html>
+
+
+
