--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <a href="https://linkedin.com" target="blank">
                 <div class="media media2">
                     <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin" class="svg-inline--fa fa-linkedin fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"></path></svg>               
-                 </div>
+                </div>
             </a>
             <a href="https://twitter.com" target="blank">
                 <div class="media media3">
@@ -130,11 +130,11 @@
 
 <!-- Section Experiences -->
 <section class="section-experiences">
-    <h2 class="h2"> What i do... </h2> 
+    <h2 class="titreido"> What i do... </h2> 
     <div class="pres-experiences">
 
         <div class="exp-left">
-            <h3> Part Coder </h3> 
+            <h3 class= titrewhatido> Part Coder </h3> 
             <br>
             <ul>
                 <li>
@@ -155,7 +155,7 @@
             <img src="images/coderrr.png" alt="diagramme icone" class="img-medias2">
         </div>
         <div class="exp-right">
-            <h3> Part Designer </h3>
+            <h3 class= titrewhatido> Part Designer </h3>
             <br>
             <ul>
                 <li>
@@ -372,7 +372,7 @@
 <!-- Section Contact -->
 <section class="section-contact" id="contact">
 
-    <h2><strong>Let's stay in touch !</strong> </h2>
+    <h2 class="staytouch">Let's stay in touch !</h2>
 
     <div class="container-form">
 
@@ -389,7 +389,7 @@
             </div>
             <br>
             <div class="form-groupe">
-                <textarea id="txt" style="width:800px; height:150px;" placeholder="Your message" required></textarea>
+                <textarea id="txt"  placeholder="Your message" required></textarea>
             </div>
             <br>
             <div class="form-groupe">
