--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- Section Accueil -->
 
     <section class="accueil" id="accueil">
-        <h1>Welcome to my space</h1>
+        <h1 classe="titre-accueil">Welcome to my space</h1>
         <p class="txt-animation"></p>
             <div class="boutons-accueil">
                 <a href="#" class="btn-acc1">PROJECTS</a>
