--- a/index.html
+++ b/index.html
@@ -111,14 +111,12 @@
     <div class="container-presentation">
 
         <div class="fond-forme"></div>
-
         <div class="pres-gauche">
-            <h3 classe="pres-bref">I'm a Software developer and a UI/UX interface designer from Rabat, Morocco.</h3>
+            <h3 class="pres-bref">I'm a Software developer and a UI/UX interface designer from Rabat, Morocco.</h3>
             <hr>
             <img src="images/cliart.png" alt="software icone" class="img-medias">
             <p class ="ragraf"> I enjoy working on new project and designing the interface to make it visualy appealing. <br> <br> I also love using back-end development technologies to create that automate common tasks or solves common problems.   </p>
-            <br>
-            <p>
+            <p class ="ragraf">
             Apart from that, you'll often see me in the gym or cycling on the road.
             </p> <br><br>
             </div>
@@ -136,7 +134,7 @@
         <div class="exp-left">
             <h3 class= titrewhatido> Part Coder </h3> 
             <br>
-            <ul>
+            <ul class="liste1">
                 <li>
                     Back-end development
                 </li>
@@ -157,7 +155,7 @@
         <div class="exp-right">
             <h3 class= titrewhatido> Part Designer </h3>
             <br>
-            <ul>
+            <ul class="liste1">
                 <li>
                     UI Design
                 </li>
